# EdPlan

./: .gitignore  README.md
ChatbotUI/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
ChatbotUI/public/: form.html
ChatbotUI/public/assets/: Courses.json  career_employers.json  career_program_data.json  education-plan.json  nmsu_new_mexico_state_university.json  northern_new_mexico_college.json  (+5 more)
ChatbotUI/src/: App.jsx  index.css  main.jsx
fastapi_backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
fastapi_backend/alembic/: env.py  script.py.mako
fastapi_backend/alembic/versions/: 0001_create_core_tables.py  0002_create_intake_submissions_table.py  0003_add_email_verification.py  0004_add_plan_degree.py
fastapi_backend/app/: main.py
fastapi_backend/app/api/routes/: __init__.py  customer.py  dashboard.py  global_data.py  intake.py  universities.py  users.py
fastapi_backend/app/clients/: college_scorecard.py
fastapi_backend/app/core/: config.py
fastapi_backend/app/db/: base.py  session.py
fastapi_backend/app/models/: __init__.py  education_plan.py  user.py
fastapi_backend/app/schemas/: auth.py  common.py  customer.py  dashboard.py  education.py  global_data.py  university.py
fastapi_backend/app/security/: auth.py
fastapi_backend/app/services/: __init__.py  customer_service.py  dashboard_service.py  education_plan_service.py  global_service.py  user_service.py
fastapi_backend/app/utils/: email.py  sms.py
fastapi_backend/eduplan_fastapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+38 files in other folders)
