[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eduplan-fastapi"
version = "0.1.0"
description = "FastAPI backend for EduPlan platform"
authors = [
  {name = "EduPlan Team", email = "support@eduplan.ai"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "sqlalchemy[asyncio]>=2.0.36",
  "pyodbc>=5.2.0",
  "aioodbc>=0.4.7",
  "alembic>=1.13.3",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.7.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "email-validator>=2.2.0",
  "tenacity>=9.0.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.2",
  "twilio>=9.3.4"
]

[project.optional-dependencies]
dev = [
  "black>=24.10.0",
  "ruff>=0.7.3",
  "mypy>=1.13.0",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0"
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "C4"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.setuptools]
packages = ["app"]
